--- a/WebContent/assets/css/destiny-card.css
+++ b/WebContent/assets/css/destiny-card.css
@@ -1,18 +1,10 @@
 @charset "UTF-8";
-.destiny-card-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0 45px;
-}
-.destiny-card {
-	
+.cards-wrapper {
+	display: flex;
+	flex-wrap:wrap;
 }
 
-.place-image {
-    max-width: 300px;
-}
-
-.place-image_img {
-	width: 100%;
+.card-serie {
+    max-width: 32%;
+    margin: 0 10px;
 }
